Let desktop file fit openSUSE rules.
It finally resolves #68.

--- a/data/xfdashboard.desktop.in.in
+++ b/data/xfdashboard.desktop.in.in
@@ -5,6 +5,6 @@ _Comment=Maybe a Gnome shell like dashboard for Xfce
 TryExec=@bindir@/xfdashboard
 Exec=@bindir@/xfdashboard
 Icon=xfdashboard
-Categories=System;
-NotShowIn=GNOME;KDE;Unity;
+Categories=System;Applet;
+OnlyShowIn=XFCE;
 Terminal=false
