No way to fully pass freedesktop standarts.
http://standards.freedesktop.org/menu-spec/menu-spec-1.0.html#category-registry

Applet has to be used but than OnlyShowIn has to be used. So let have a single warning:

xfdashboard: W: invalid-desktopfile /usr/share/applications/xfdashboard.desktop value item "Applet" in key
"Categories" in group "Desktop Entry" is a reserved category, so a "OnlyShowIn" key must be included.

--- a/data/xfdashboard.desktop.in.in
+++ b/data/xfdashboard.desktop.in.in
@@ -5,6 +5,6 @@ _Comment=Maybe a Gnome shell like dashboard for Xfce
 TryExec=@bindir@/xfdashboard
 Exec=@bindir@/xfdashboard
 Icon=xfdashboard
-Categories=System;
+Categories=System;Applet;
 NotShowIn=GNOME;KDE;Unity;
 Terminal=false
