--- a/data/themes/xfdashboard-dark/xfdashboard.theme.in.in
+++ b/data/themes/xfdashboard-dark/xfdashboard.theme.in.in
@@ -2,7 +2,7 @@
 _Name=xfdashboard-dark
 _Comment=Dark theme for xfdashboard
 Style=xfdashboard-dark.css
-Layout=xfdashboard.xml
+Layout=xfdashboard.xml;xfdashboard-secondary.xml
 Effects=effects.xml
 Author=lacios
 Version=@PACKAGE_VERSION@
