--- a/data/themes/xfdashboard-wine/Makefile.am
+++ b/data/themes/xfdashboard-wine/Makefile.am
@@ -8,6 +8,7 @@ theme_DATA = \
 	xfdashboard-wine.css \
 	xfdashboard.css \
 	xfdashboard.xml \
+	xfdashboard-secondary.xml \
 	effects.xml \
 	screenshot-xfdashboard-wine.png
 
