--- a/data/themes/xfdashboard-auber/Makefile.am
+++ b/data/themes/xfdashboard-auber/Makefile.am
@@ -8,6 +8,7 @@ theme_DATA = \
 	xfdashboard-auber.css \
 	xfdashboard.css \
 	xfdashboard.xml \
+	xfdashboard-secondary.xml \
 	effects.xml \
 	screenshot-xfdashboard-auber.png
 
