--- a/data/themes/xfdashboard-auber/xfdashboard.theme.in.in
+++ b/data/themes/xfdashboard-auber/xfdashboard.theme.in.in
@@ -2,7 +2,7 @@
 _Name=xfdashboard-auber
 _Comment=Aubergine theme for xfdashboard
 Style=xfdashboard-auber.css
-Layout=xfdashboard.xml
+Layout=xfdashboard.xml;xfdashboard-secondary.xml
 Effects=effects.xml
 Author=lacios
 Version=@PACKAGE_VERSION@
