--- a/data/themes/xfdashboard-mint/xfdashboard.theme.in.in
+++ b/data/themes/xfdashboard-mint/xfdashboard.theme.in.in
@@ -2,7 +2,7 @@
 _Name=xfdashboard-mint
 _Comment=Fresh-green flavored theme for xfdashboard
 Style=xfdashboard-mint.css
-Layout=xfdashboard.xml
+Layout=xfdashboard.xml;xfdashboard-secondary.xml
 Effects=effects.xml
 Author=lacios
 Version=@PACKAGE_VERSION@
