--- a/xfdashboard/Makefile.am
+++ b/xfdashboard/Makefile.am
@@ -145,6 +145,7 @@ xfdashboard_CFLAGS = \
 	$(GIO_UNIX_CFLAGS) \
 	$(GARCON_CFLAGS) \
 	$(LIBXFCONF_CFLAGS) \
+	$(LIBXFCE4UTIL_CFLAGS) \
 	$(DBUS_GLIB_CFLAGS) \
 	$(PLATFORM_CFLAGS)
 
@@ -162,6 +163,7 @@ xfdashboard_LDADD = \
 	$(GIO_UNIX_LIBS) \
 	$(GARCON_LIBS) \
 	$(LIBXFCONF_LIBS) \
+	$(LIBXFCE4UTIL_LIBS) \
 	$(DBUS_GLIB_LIBS) \
 	-lm
 
