Field "TryExec" should only contain the path to the executable to test if it exists and is executable but not any arguments which should be passed to the executable.
Fixes GH issue #76

--- a/data/xfdashboard-autostart.desktop.in.in
+++ b/data/xfdashboard-autostart.desktop.in.in
@@ -2,7 +2,7 @@
 Type=Application
 _Name=Xfdashboard
 _Comment=Start xfdashboard as daemon in background
-TryExec=@bindir@/xfdashboard -d
+TryExec=@bindir@/xfdashboard
 Exec=@bindir@/xfdashboard -d
 Icon=xfdashboard
 NotShowIn=GNOME;KDE;Unity;
