--- a/data/xfdashboard-autostart.desktop.in.in
+++ b/data/xfdashboard-autostart.desktop.in.in
@@ -5,6 +5,6 @@ _Comment=Start xfdashboard as daemon in background
 TryExec=@bindir@/xfdashboard
 Exec=@bindir@/xfdashboard -d
 Icon=xfdashboard
-NotShowIn=GNOME;KDE;Unity;
+OnlyShowIn=XFCE;
 Terminal=false
 Hidden=true
