Allow settings application to be shown in other desktop environments than Xfce (GH #78)

--- a/data/xfdashboard-settings.desktop.in.in
+++ b/data/xfdashboard-settings.desktop.in.in
@@ -8,7 +8,7 @@ TryExec=@bindir@/xfdashboard-settings
 Exec=@bindir@/xfdashboard-settings
 Icon=xfdashboard
 Categories=XFCE;GTK;Settings;DesktopSettings;X-XFCE-SettingsDialog;X-XFCE-PersonalSettings;
-OnlyShowIn=XFCE;
+NotShowIn=GNOME;KDE;Unity;
 Terminal=false
 StartupNotify=true
 X-XfcePluggable=true
