Split out window actor of XfdashboardLiveWorkspace into a new fully themable actor
This commit addresses issue GH #89

--- a/xfdashboard/Makefile.am
+++ b/xfdashboard/Makefile.am
@@ -43,6 +43,7 @@ xfdashboard_headers = \
 	image-content.h \
 	live-window.h \
 	live-workspace.h \
+	live-workspace-window.h \
 	outline-effect.h \
 	quicklaunch.h \
 	scaled-table-layout.h \
@@ -105,6 +106,7 @@ xfdashboard_SOURCES = \
 	image-content.c \
 	live-window.c \
 	live-workspace.c \
+	live-workspace-window.c \
 	main.c \
 	outline-effect.c \
 	quicklaunch.c \
