Add libxfce4util version to output in configure.ac.in

--- a/configure.ac.in
+++ b/configure.ac.in
@@ -266,23 +266,24 @@ echo
 echo "Build Configuration for $PACKAGE version $VERSION revision $REVISION:"
 echo
 echo "Library versions used:"
-echo "  libwnck:    $LIBWNCK_VERSION"
-echo "  clutter:    $CLUTTER_VERSION"
-echo "  cogl:       $CLUTTER_COGL_VERSION"
-echo "  gtk+:       $GTK_VERSION"
-echo "  glib:       $GLIB_VERSION"
-echo "  gio:        $GIO_VERSION"
-echo "  gio-unix:   $GIO_UNIX_VERSION"
-echo "  garcon:     $GARCON_VERSION"
-echo "  libxconf:   $LIBXFCONF_VERSION"
-echo "  dbus-glib:  $DBUS_GLIB_VERSION"
+echo "  libwnck:       $LIBWNCK_VERSION"
+echo "  clutter:       $CLUTTER_VERSION"
+echo "  cogl:          $CLUTTER_COGL_VERSION"
+echo "  gtk+:          $GTK_VERSION"
+echo "  glib:          $GLIB_VERSION"
+echo "  gio:           $GIO_VERSION"
+echo "  gio-unix:      $GIO_UNIX_VERSION"
+echo "  garcon:        $GARCON_VERSION"
+echo "  libxconf:      $LIBXFCONF_VERSION"
+echo "  libxfce4util:  $LIBXFCE4UTIL_VERSION"
+echo "  dbus-glib:     $DBUS_GLIB_VERSION"
 echo
 echo "Tools used:"
 echo "  glib-genmarshal:  $GLIB_GENMARSHAL"
 echo "  glib-mkenums:     $GLIB_MKENUMS"
 echo
 echo "Features enabled:"
-echo "  XComposite:  $enabled_x11_extension_composite"
-echo "  XDamage:     $enabled_x11_extension_damage"
-echo "  Xinerama:    $enabled_x11_extension_xinerama"
+echo "  XComposite:    $enabled_x11_extension_composite"
+echo "  XDamage:       $enabled_x11_extension_damage"
+echo "  Xinerama:      $enabled_x11_extension_xinerama"
 echo
