--- a/data/appdata/xfdashboard.appdata.xml.in
+++ b/data/appdata/xfdashboard.appdata.xml.in
@@ -44,6 +44,15 @@
 	</provides>
 
 	<releases>
+		<release version="0.5.0" timestamp="1434045183">
+			<description>
+				<_p>This unstable development introduces new options to workspace selector
+				and loads the window contents in background to make the application feel
+				smoother and faster, especially at start-up. It also contains a lots of
+				bug-fixes and smaller improvements.
+				</_p>
+			</description>
+		</release>
 		<release version="0.4.2" timestamp="1433008431">
 			<description>
 				<_p>This release hopefully fixes problems with the stage resizes
