Implement basic application tracker
The application tracker tries to determine and to keep track of running application. It does it by in two ways currently for each new window opened.

1.) Parse the environment variables of the process ID which own the window. If it has the environment variables GIO_LAUNCHED_DESKTOP_FILE and GIO_LAUNCHED_DESKTOP_FILE_PID and GIO_LAUNCHED_DESKTOP_FILE_PID matches the process ID of the window's owner process then it assumed that the application in GIO_LAUNCHED_DESKTOP_FILE is running. This step only work at Linux currently.
2.) Get some properties from the window (resource class etc.), add '.desktop' to the value and try to lookup a matching application in XfdashboardApplicationDatasbase, first with unmodified value and then in all lower-case.

This commit implements a first version for GH #39

--- a/xfdashboard/Makefile.am
+++ b/xfdashboard/Makefile.am
@@ -21,6 +21,7 @@ xfdashboard_headers = \
 	application.h \
 	application-button.h \
 	application-database.h \
+	application-tracker.h \
 	applications-menu-model.h \
 	applications-search-provider.h \
 	applications-view.h \
@@ -83,6 +84,7 @@ xfdashboard_SOURCES = \
 	application.c \
 	application-button.c \
 	application-database.c \
+	application-tracker.c \
 	applications-menu-model.c \
 	applications-search-provider.c \
 	applications-view.c \
