Add session management to xfdashboard to restart it if it crashes
This fixes bug report #12143

--- a/xfdashboard/Makefile.am
+++ b/xfdashboard/Makefile.am
@@ -152,6 +152,7 @@ libxfdashboard_la_CFLAGS = \
 	$(GARCON_CFLAGS) \
 	$(LIBXFCONF_CFLAGS) \
 	$(LIBXFCE4UTIL_CFLAGS) \
+	$(LIBXFCE4UI_CFLAGS) \
 	$(DBUS_GLIB_CFLAGS) \
 	$(PLATFORM_CFLAGS)
 
@@ -165,6 +166,7 @@ libxfdashboard_la_LIBADD = \
 	$(GARCON_LIBS) \
 	$(LIBXFCONF_LIBS) \
 	$(LIBXFCE4UTIL_LIBS) \
+	$(LIBXFCE4UI_LIBS) \
 	$(DBUS_GLIB_LIBS) \
 	$(LIBM)
 
