--- a/configure.ac.in
+++ b/configure.ac.in
@@ -28,6 +28,7 @@ m4_define([xcomposite_minimum_version], [0.2])
 m4_define([intltool_minimum_version], [0.35])
 m4_define([gtk_minimum_version], [3.2])
 m4_define([libxfce4util_minimum_version],[4.10.0])
+m4_define([libxfce4ui_minimum_version],[4.10.0])
 
 dnl *******************************************
 dnl *** Debugging support for GIT snapshots ***
@@ -194,6 +195,7 @@ XDT_CHECK_PACKAGE([GIO_UNIX], [gio-unix-2.0], [gio_minimum_version])
 XDT_CHECK_PACKAGE([GARCON], [garcon-1], [garcon_minimum_version])
 XDT_CHECK_PACKAGE([LIBXFCONF], [libxfconf-0], [xfconf_minimum_version])
 XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0],[libxfce4util_minimum_version])
+XDT_CHECK_PACKAGE([LIBXFCE4UI], [libxfce4ui-2],[libxfce4ui_minimum_version])
 XDT_CHECK_PACKAGE([DBUS_GLIB], [dbus-glib-1], [dbus_glib_minimum_version], [
 	XDT_PROG_PKG_CONFIG()
 
@@ -275,6 +277,7 @@ echo "  gio:           $GIO_VERSION"
 echo "  gio-unix:      $GIO_UNIX_VERSION"
 echo "  garcon:        $GARCON_VERSION"
 echo "  libxconf:      $LIBXFCONF_VERSION"
+echo "  libxfce4ui:    $LIBXFCE4UI_VERSION"
 echo "  libxfce4util:  $LIBXFCE4UTIL_VERSION"
 echo "  dbus-glib:     $DBUS_GLIB_VERSION"
 echo
