--- a/configure.ac.in
+++ b/configure.ac.in
@@ -50,6 +50,7 @@ AM_CONFIG_HEADER([config.h])
 AM_INIT_AUTOMAKE([1.8 no-dist-gzip dist-bzip2 tar-ustar])
 AM_MAINTAINER_MODE()
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
+AC_CONFIG_MACRO_DIR([m4])
 
 dnl *******************************
 dnl *** Check for UNIX variants ***
@@ -74,7 +75,7 @@ dnl *** Initialize libtool ***
 dnl **************************
 LT_PREREQ([2.2.6])
 LT_INIT([disable-static])
-AC_CONFIG_MACRO_DIR([m4])
+LT_LIB_M
 
 dnl **************************
 dnl *** Substitute version ***
