--- a/data/appdata/xfdashboard.appdata.xml.in
+++ b/data/appdata/xfdashboard.appdata.xml.in
@@ -44,6 +44,15 @@
 	</provides>
 
 	<releases>
+		<release version="0.5.1" timestamp="1441652092">
+			<description>
+				<_p>This unstable development introduces a new configurable options to
+				speed up loading window contents in background and it shows also running
+				applications in quicklaunch for those not being stored as favourites.
+				As usual it also contains a lots of bug-fixes and smaller improvements.
+				</_p>
+			</description>
+		</release>
 		<release version="0.5.0" timestamp="1434045183">
 			<description>
 				<_p>This unstable development introduces new options to workspace selector
