Add kudos to AppData
Add kudos to AppData as explained at https://git.gnome.org/browse/gnome-software/plain/doc/kudos.md

--- a/data/appdata/xfdashboard.appdata.xml.in
+++ b/data/appdata/xfdashboard.appdata.xml.in
@@ -43,6 +43,11 @@
 		<binary>xfdashboard</binary>
 	</provides>
 
+	<kudos>
+		<kudo>HiDpiIcon</kudo>
+		<kudo>ModernToolkit</kudo>
+	</kudos>
+
 	<releases>
 		<release version="0.5.3" timestamp="1447437275">
 			<description>
