Add keywords to AppData

--- a/data/appdata/xfdashboard.appdata.xml.in
+++ b/data/appdata/xfdashboard.appdata.xml.in
@@ -50,6 +50,14 @@
 		<kudo>ModernToolkit</kudo>
 	</kudos>
 
+	<keywords>
+		<keyword>window management</keyword>
+		<keyword>application management</keyword>
+		<keyword>organize</keyword>
+		<keyword>search tool</keyword>
+		<keyword>search</keyword>
+	</keywords>
+
 	<releases>
 		<release version="0.5.4" timestamp="1450515013">
 			<description>
