--- a/data/appdata/xfdashboard.appdata.xml.in
+++ b/data/appdata/xfdashboard.appdata.xml.in
@@ -59,6 +59,13 @@
 	</keywords>
 
 	<releases>
+		<release version="0.5.5" timestamp="1454269066">
+			<description>
+				<_p>This unstable development introduces a new search provider plugin
+				which uses installed Gnome-Shell search providers as additional source.
+				</_p>
+			</description>
+		</release>
 		<release version="0.5.4" timestamp="1450515013">
 			<description>
 				<_p>This unstable development introduces a new optional configuration to
