--- a/configure.ac.in
+++ b/configure.ac.in
@@ -260,6 +260,7 @@ data/themes/xfdashboard-wine/Makefile
 plugins/Makefile
 plugins/clock-view/Makefile
 plugins/gnome-shell-search-provider/Makefile
+plugins/hot-corner/Makefile
 po/Makefile.in
 settings/Makefile
 xfdashboard/Makefile
