Make plugin ID a definition specified in Makefile instead of source files also at hot-corner plugin

--- a/plugins/hot-corner/Makefile.am
+++ b/plugins/hot-corner/Makefile.am
@@ -6,7 +6,8 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/xfdashboard \
 	-DG_LOG_DOMAIN=\"xfdashboard-plugin-hot_corner\" \
 	-DLIBEXECDIR=\"$(libexecdir)\" \
-	-DPACKAGE_LOCALE_DIR=\"$(localedir)\"
+	-DPACKAGE_LOCALE_DIR=\"$(localedir)\" \
+	-DPLUGIN_ID=\"de.froevel.xfdashboard.hot-corner\"
 
 plugin_LTLIBRARIES = \
 	hot-corner.la
